Fix z-index

--- a/assets/css/consent.css
+++ b/assets/css/consent.css
@@ -17,6 +17,7 @@
 #consent-overlay-container,
 #consent-notice,
 #consent-overlay {
+  z-index: 999;
   display: none;
   text-decoration: none;
 }
